added goals/questions to ask

--- a/Lottery (In Progress).ipynb
+++ b/Lottery (In Progress).ipynb
@@ -816,12 +816,18 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "# Problems associated with gambling\n",
     "# Crime rates\n",
     "# Education (exploiting stupid people)\n",
     "# Income (shown)\n",
+    "# Redistribution of wealth to the wealthy, is that fair or is that good?\n",
     "# Where will the money now go (hopefully better uses not drugs/alcohol)\n",
-    "# What will pay for services funded by lottery?\n",
+    "# Do people go from drug abuse to gambling addiction or vice-versa?\n",
+    "    # is association good enough? if they lead to each other banning 1 is not bad\n",
+    "# If you ban gambling will people turn to drugs/alcohol? Which is the lesser of the 2 evils?\n",
+    "# How do towns spend aid money? What will pay for services funded by lottery?\n",
     "# Effect of Dissolving lottery? How many people work for it?"
    ]
   },
