added all ipython notebooks before switching out computer

--- a/Lottery (In Progress).ipynb
+++ b/Lottery (In Progress).ipynb
@@ -809,36 +809,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 168,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
+    "# Questions to answer to reach conclusion:\n",
     "\n",
-    "\n",
-    "# Problems associated with gambling\n",
-    "# Crime rates\n",
-    "# Education (exploiting stupid people)\n",
-    "# Income (shown)\n",
-    "# Redistribution of wealth to the wealthy, is that fair or is that good?\n",
-    "# Where will the money now go (hopefully better uses not drugs/alcohol)\n",
-    "# Do people go from drug abuse to gambling addiction or vice-versa?\n",
-    "    # is association good enough? if they lead to each other banning 1 is not bad\n",
-    "# If you ban gambling will people turn to drugs/alcohol? Which is the lesser of the 2 evils?\n",
-    "# How do towns spend aid money? What will pay for services funded by lottery?\n",
-    "# Effect of Dissolving lottery? How many people work for it?"
+    "* Problems associated with gambling\n",
+    "* Crime rates\n",
+    "* Education (exploiting stupid people)\n",
+    "* Income (shown)\n",
+    "* Redistribution of wealth to the wealthy, is that fair or is that good?\n",
+    "* Where will the money now go (hopefully better uses not drugs/alcohol)\n",
+    "* Do people go from drug abuse to gambling addiction or vice-versa?\n",
+    "    * is association good enough? if they lead to each other banning 1 is not bad\n",
+    "* If you ban gambling will people turn to drugs/alcohol? Which is the lesser of the 2 evils?\n",
+    "    * look at rates when gambling was banned and legal, also look at social projects implemented\n",
+    "* How do towns spend aid money? What will pay for services funded by lottery?\n",
+    "* Effect of Dissolving lottery? How many people work for it?\n",
+    "* Probably other stuff...to be determined...\n",
+    "* Card games are more enjoyment and SOCIAL you play with other people rather than "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "* gambling promotes alcoholism, free drinks while gambling\n",
+    "http://www.readcube.com/articles/10.1111%2Fj.1530-0277.1986.tb05610.x?r3_referer=wol&tracking_action=preview_click&show_checkout=1&purchase_referrer=onlinelibrary.wiley.com&purchase_site_license=PUBLICATION_OUTSIDE_OF_LICENSE_PERIOD\n",
+    "\n",
+    "* addiction severity index (lesser of evils)\n",
+    "http://www.readcube.com/articles/10.1111%2Fj.1360-0443.1991.tb01863.x?r3_referer=wol&tracking_action=preview_click&show_checkout=1&purchase_referrer=onlinelibrary.wiley.com&purchase_site_license=PUBLICATION_OUTSIDE_OF_LICENSE_PERIOD\n",
+    "\n",
+    "* binge eating, problem drinking, gambling addiction\n",
+    "http://ac.els-cdn.com/S0191886907003510/1-s2.0-S0191886907003510-main.pdf?_tid=b48d86f8-9df5-11e5-a378-00000aab0f27&acdnat=1449611612_8a97b92c861381ba7d59e06bcf76e0d6"
+   ]
   }
  ],
  "metadata": {
