--- a/RSA Algorithm.ipynb
+++ b/RSA Algorithm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# RSA Algorithm\n",
     "\n",
-    "This is my implementation of the RSA algorithm.\n",
+    "This is my implementation of the RSA algorithm. I didn't see any python code for it so I made some. Watch the Khan Academy series for an explanation of the algorithm. Or this video is super helpful as well.\n",
     "If there is something wrong with it please message me."
    ]
   },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +262,7 @@
        "(53, 61.0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
