more stuff for rsa/primes

--- a/RSA Algorithm.ipynb
+++ b/RSA Algorithm.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 132,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -224,18 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "# How to solve RSA algorithm\n",
     "# Find prime factors of n... not easy for large n\n",
     "def getPrimeFactors(n):\n",
-    "    # Very simple check if a number is prime (change to miller-rabin or aks)\n",
+    "    # Very simple check if a number is prime\n",
     "    def isprime(x):\n",
-    "        for i in list(range(2, int(x-1))):\n",
+    "        if x != 2 and x % 2 == 0:\n",
+    "            return False\n",
+    "        for i in list(range(3, int(math.sqrt(x)+1)))[::2]:\n",
     "            if x % i == 0:\n",
     "                return False\n",
     "        else:\n",
@@ -251,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +266,7 @@
        "(53, 61.0)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,13 +278,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Hooray we found p and q! #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## The Seive of Eratosthenes\n",
+    "#### Steps\n",
+    "* Generate a list of numbers from 1 to some number (n)\n",
+    "* Initially, all numbers in the list are unmarked\n",
+    "* Starting at 2 and then for every element in the list mark every multiple of every number you iterate over (marking it twice does not negate it)\n",
+    "* Do this for every number up to and including the square root of n\n",
+    "* All unmarked numbers [2,n] are prime numbers\n",
+    "\n",
+    "#### Example of completed sieve for numbers up to 100\n",
+    "<img src=\"files/data/sieve_100.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Get list of prime numbers up to n \n",
+    "def sieveOfEratosthenes(n, numbers=[], count=0):\n",
+    "    if numbers == []:\n",
+    "        numbers = list(range(2,n))  # math.floor(math.sqrt(n))\n",
+    "    if math.floor(math.sqrt(n)) < numbers[count]:\n",
+    "        return numbers[:count+1] + list(filter(lambda x: x % numbers[count] != 0,numbers[count:]))\n",
+    "    else:\n",
+    "        new_nums = numbers[:count+1] + list(filter(lambda x: x % numbers[count] != 0,numbers[count:]))\n",
+    "        return sieveOfEratosthenes(n, new_nums, count+1)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of prime numbers below number: 25\n",
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = sieveOfEratosthenes(100)\n",
+    "print(\"Number of prime numbers below number: \" + str(len(test)))\n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Given a number to test (n) this will give you\n",
+    "# the fastest time to make sure you have a prime number\n",
+    "# the prime list should be all primes from 2 to n \n",
+    "# (not good unless you can store all of that and may use it multiple times)\n",
+    "def isPrimeFromList(n, prime_list):\n",
+    "    for prime in prime_list:\n",
+    "        if n % prime == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "num = 101\n",
+    "isPrimeFromList(num, sieveOfEratosthenes(int(math.sqrt(num))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fast Modular Exponentiation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from functools import reduce  # scala plz\n",
+    "\n",
+    "# used for understanding, just use the unbounded ** python operator\n",
+    "def fastModularExponentiation(base, exponent, modulus):\n",
+    "    # form of base^(exponent) mod modulus\n",
+    "    powers_of_2 = []\n",
+    "    for ix, bit in enumerate(list(reversed(bin(exponent)[2:]))):\n",
+    "        if bit == '1':\n",
+    "            powers_of_2.append((base**(2**(ix)))%modulus)\n",
+    "    \n",
+    "    return reduce(lambda x,y: x*y, powers_of_2, 1) % modulus\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (200^20) % 17\n",
+    "fastModularExponentiation(200,20,17)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Probabilistic Primes\n",
+    "#### (Will put up more thorough explanation soon. Maybe some pictures too!)\n",
+    "\n",
+    "This is a function that will tell you if a number (p) is a prime number with a certain chance of error (ex. 1/(2^20)). It works by checking if a number shares a common denominator with a random number from 2 to p (in which case the number is composite) and then if it does not share a common denominator > 1 with a, we use fermat's little theorem which states that a base (a)^(p-1) mod p (is congruent to) 1. However this is not ALWAYS true it is possible for 1/2 of the numbers from 2 to p to be fermat liars (values of a that don't satisfy this theorem). So our error is 1/(2^t) where t is the number of different random bases we use. The function also creates a set of numbers that have already been tested because you don't want to use the same base to test against because that will mess with your error numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from random import randint\n",
+    "\n",
+    "## The beauty of this is that the time it takes to decide if a number is a prime\n",
+    "## scales with the error that you supply rather than the magnitude of the number you provide.\n",
+    "## (Except that you still have to raise a base a to the power of that number)\n",
+    "def fermatPrimalityTest(p, error):\n",
+    "    # error = 1/(2**n_tests)\n",
+    "    if error <= 0 or error >= 1:\n",
+    "        raise Exception(\"Error must be 0 < error < 1.\")\n",
+    "        \n",
+    "    n_tests = math.ceil(math.log(1/error)/math.log(2))\n",
+    "    tested_numbers = set()\n",
+    "    for _ in range(0, n_tests):\n",
+    "        a = randint(2,p)\n",
+    "        while a in tested_numbers:\n",
+    "            a = randint(2,p)\n",
+    "        if getGCD(p,a) != 1:\n",
+    "            return False\n",
+    "        if (a**(p-1)) % p != 1:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fermatPrimalityTest(5613,1/(2^20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## More to come?"
    ]
   }
  ],
@@ -300,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
