--- a/CS240 Extra Credit.ipynb
+++ b/CS240 Extra Credit.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -74,12 +74,12 @@
      "output_type": "stream",
      "text": [
       "Median fraction of collision-free permutations after 100 trials when n=1 and r=500: 0.0\n",
-      "Median fraction of collision-free permutations after 100 trials when n=2 and r=500: 0.498\n",
-      "Median fraction of collision-free permutations after 100 trials when n=3 and r=500: 0.33399999999999996\n",
-      "Median fraction of collision-free permutations after 100 trials when n=4 and r=500: 0.378\n",
-      "Median fraction of collision-free permutations after 100 trials when n=5 and r=500: 0.366\n",
-      "Median fraction of collision-free permutations after 100 trials when n=10 and r=500: 0.372\n",
-      "Median fraction of collision-free permutations after 100 trials when n=100 and r=500: 0.366\n"
+      "Median fraction of collision-free permutations after 100 trials when n=2 and r=500: 0.5\n",
+      "Median fraction of collision-free permutations after 100 trials when n=3 and r=500: 0.33599999999999997\n",
+      "Median fraction of collision-free permutations after 100 trials when n=4 and r=500: 0.374\n",
+      "Median fraction of collision-free permutations after 100 trials when n=5 and r=500: 0.367\n",
+      "Median fraction of collision-free permutations after 100 trials when n=10 and r=500: 0.364\n",
+      "Median fraction of collision-free permutations after 100 trials when n=100 and r=500: 0.369\n"
      ]
     }
    ],
@@ -88,6 +88,61 @@
     "    temp = [f(x,500) for _ in range(0,100)]\n",
     "    print(\"Median fraction of collision-free permutations after 100 trials when n={0} and r=500: {1}\".format(x,np.median(temp)))   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "714.7654653128429\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 131\n",
+    "s = 0\n",
+    "for i in range(1,n+1):\n",
+    "    s += n/((n-i)+1)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111042.71700247528\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 262\n",
+    "s = 0\n",
+    "for i in range(1,n+1):\n",
+    "    s += (n*(i-1)) / (((n-i)+1)**2)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
