--- a/Linear Algebra.ipynb
+++ b/Linear Algebra.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 505,
    "metadata": {
     "collapsed": false
    },
@@ -243,18 +243,14 @@
     "            columns.append([row[column] for row in self.matrix])\n",
     "        return columns\n",
     "    \n",
-    "    def columnsAreScalarMultiples(self):\n",
-    "        A = self.transpose()\n",
-    "        for col_ix in range(0,len(A)-1):\n",
-    "            temp = []\n",
-    "            for row_ix in range(0,len(A[0])):\n",
-    "                if (A[col_ix][row_ix] == 0 and A[col_ix+1][row_ix] != 0) \\\n",
-    "                or (A[col_ix+1][row_ix] == 0 and A[col_ix][row_ix] != 0):\n",
-    "                    return False\n",
-    "                temp.append(A[col_ix][row_ix]/A[col_ix+1][row_ix])\n",
-    "            for ix in range(0,len(temp)-1):\n",
-    "                if temp[ix] != temp[ix+1]:\n",
-    "                    return False\n",
+    "    def invertible(self):\n",
+    "        if not self.isSquare():\n",
+    "            return False\n",
+    "        \n",
+    "        test = [0]*len(self.matrix[0])\n",
+    "        for row in self.matrix:\n",
+    "            if row == test:\n",
+    "                return False\n",
     "        return True\n",
     "            \n",
     "    def echelonForm(self, matrix=\"self\"):\n",
@@ -336,9 +332,8 @@
     "    \n",
     "    # fix memory stuff...\n",
     "    def inverse(self):\n",
-    "        # all the invertible checks go here...\n",
-    "        if not self.isSquare():\n",
-    "            raise Exception(\"Matrix must be square to be invertible\")\n",
+    "        if not self.invertible():\n",
+    "            raise Exception(\"Matrix not invertible\")\n",
     "        \n",
     "        identity_matrix = []\n",
     "        for x in range(0,len(self.matrix)):\n",
@@ -402,10 +397,7 @@
     "        return [R[x][x] for x in range(len(R))]\n",
     "    \n",
     "    def eigenVectors(self):\n",
-    "        pass\n",
-    "    \n",
-    "    def invertible(self):\n",
-    "        pass # bigger TODO"
+    "        pass"
    ]
   },
   {
