quick least squares added

--- a/Linear Algebra.ipynb
+++ b/Linear Algebra.ipynb
@@ -397,12 +397,65 @@
     "        return [R[x][x] for x in range(len(R))]\n",
     "    \n",
     "    def eigenVectors(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def leastSquares(self, b):\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 560,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0]\n",
+      "[2.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mat_mul2(A,B):\n",
+    "    if len(A[0]) != len(B):\n",
+    "        raise Exception(\"Cannot multiply matrices, # columns of A must equal # rows of B\")\n",
+    "        \n",
+    "    result = []\n",
+    "    for col_ix in range(0, len(B[0])):\n",
+    "        temp = []\n",
+    "        for ix, row in enumerate(A):\n",
+    "            temp.append(dot_product(row,[B[x][col_ix] for x in range(0,len(B))]))\n",
+    "        result.append(temp)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "# AT Ax = AT b\n",
+    "# x = ((AT A)^(-1)) ((AT b))\n",
+    "\n",
+    "A = [[4,0],\n",
+    "     [0,2],\n",
+    "     [1,1]]\n",
+    "\n",
+    "b = [[2],[0],[11]]\n",
+    "\n",
+    "\n",
+    "def leastSquares(A,b):\n",
+    "    AT_A = Matrix(mat_mul2(transpose(A),A))\n",
+    "    AT_b = mat_mul2(transpose(A),b)    \n",
+    "    \n",
+    "    return mat_mul2(AT_b,AT_A.inverse())\n",
+    "\n",
+    "for x in leastSquares(A,b):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 547,
    "metadata": {
     "collapsed": true
    },
